plugins/binding/rust/source/TellusimRSBase.rs


/*
 */
extern "C" {
	fn tsImageColor_set_i(c: *mut ImageColor, src: *const Vector4i);
	fn tsImageColor_get_i(c: *const ImageColor, dest: *mut Vector4i);
	fn tsImageColor_set_u(c: *mut ImageColor, src: *const Vector4u);
	fn tsImageColor_get_u(c: *const ImageColor, dest: *mut Vector4u);
	fn tsImageColor_set_f(c: *mut ImageColor, src: *const Vector4f);
	fn tsImageColor_get_f(c: *const ImageColor, dest: *mut Vector4f);
	fn tsImageColor_set_c(c: *mut ImageColor, src: *const Color, format: Format);
	fn tsImageColor_get_c(c: *const ImageColor, dest: *mut Color, format: Format);
}

/*****************************************************************************\
 *
 * BoundRect
 *
\*****************************************************************************/

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct BoundRectf {
	pub min: Vector2f,
	pub max: Vector2f,
}

impl BoundRectf {
	
	pub fn new(min: &Vector2f, max: &Vector2f) -> BoundRectf {
		BoundRectf { min: *min, max: *max }
	}
	pub fn new_brd(br: &BoundRectd) -> BoundRectf {
		let mut ret = BoundRectf::default();
		unsafe { tsBoundRectf_set_brd(&mut ret, br); }
		ret
	}
	pub fn new_bc(bc: &BoundCirclef) -> BoundRectf {
		let mut ret = BoundRectf::default();
		unsafe { tsBoundRectf_set_bc(&mut ret, bc); }
		ret
	}
	
	pub fn expand_v(&mut self, v: &Vector2f) {
		unsafe { tsBoundRectf_expand1(self, v); }
	}
	pub fn expand(&mut self, br: &BoundRectf) {
		unsafe { tsBoundRectf_expand(self, br); }
	}
	
	pub fn inside_v(&self, v: &Vector2f) -> bool {
		unsafe { tsBoundRectf_inside1(self, v) }
	}
	pub fn inside(&self, br: &BoundRectf) -> bool {
		unsafe { tsBoundRectf_inside(self, br) }
	}
	
	pub fn distance(&self, v: &Vector2f) -> f32 {
		unsafe { tsBoundRectf_distance(self, v) }
	}
}

impl fmt::Display for BoundRectf {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "{0} : {1}", self.min, self.max)
	}
}

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct BoundRectd {
	pub min: Vector2d,
	pub max: Vector2d,
}

impl BoundRectd {
	
	pub fn new(min: &Vector2d, max: &Vector2d) -> BoundRectd {
		BoundRectd { min: *min, max: *max }
	}
	pub fn new_brf(br: &BoundRectf) -> BoundRectd {
		let mut ret = BoundRectd::default();
		unsafe { tsBoundRectd_set_brf(&mut ret, br); }
		ret
	}
	pub fn new_bc(bc: &BoundCircled) -> BoundRectd {
		let mut ret = BoundRectd::default();
		unsafe { tsBoundRectd_set_bc(&mut ret, bc); }
		ret
	}
	
	pub fn expand_v(&mut self, v: &Vector2d) {
		unsafe { tsBoundRectd_expand1(self, v); }
	}
	pub fn expand(&mut self, br: &BoundRectd) {
		unsafe { tsBoundRectd_expand(self, br); }
	}
	
	pub fn inside_v(&self, v: &Vector2d) -> bool {
		unsafe { tsBoundRectd_inside1(self, v) }
	}
	pub fn inside(&self, br: &BoundRectd) -> bool {
		unsafe { tsBoundRectd_inside(self, br) }
	}
	
	pub fn distance(&self, v: &Vector2d) -> f64 {
		unsafe { tsBoundRectd_distance(self, v) }
	}
}

impl fmt::Display for BoundRectd {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "{0} : {1}", self.min, self.max)
	}
}

/*
 */
extern "C" {
	fn tsBoundRectf_set_brd(ret: *mut BoundRectf, r: *const BoundRectd) -> *mut BoundRectf;
	fn tsBoundRectf_set_bc(ret: *mut BoundRectf, c: *const BoundCirclef) -> *mut BoundRectf;
	fn tsBoundRectf_expand1(ret: *mut BoundRectf, v: *const Vector2f) -> *mut BoundRectf;
	fn tsBoundRectf_expand(ret: *mut BoundRectf, r: *const BoundRectf) -> *mut BoundRectf;
	fn tsBoundRectf_inside1(br: *const BoundRectf, v: *const Vector2f) -> bool;
	fn tsBoundRectf_inside(br: *const BoundRectf, r: *const BoundRectf) -> bool;
	fn tsBoundRectf_distance(br: *const BoundRectf, v: *const Vector2f) -> f32;
}

extern "C" {
	fn tsBoundRectd_set_brf(ret: *mut BoundRectd, r: *const BoundRectf) -> *mut BoundRectd;
	fn tsBoundRectd_set_bc(ret: *mut BoundRectd, c: *const BoundCircled) -> *mut BoundRectd;
	fn tsBoundRectd_expand1(ret: *mut BoundRectd, v: *const Vector2d) -> *mut BoundRectd;
	fn tsBoundRectd_expand(ret: *mut BoundRectd, r: *const BoundRectd) -> *mut BoundRectd;
	fn tsBoundRectd_inside1(br: *const BoundRectd, v: *const Vector2d) -> bool;
	fn tsBoundRectd_inside(br: *const BoundRectd, r: *const BoundRectd) -> bool;
	fn tsBoundRectd_distance(br: *const BoundRectd, v: *const Vector2d) -> f64;
}

/*****************************************************************************\
 *
 * BoundCircle
 *
\*****************************************************************************/

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct BoundCirclef {
	pub center: Vector2f,
	pub radius: f32,
}

impl BoundCirclef {
	
	pub fn new(center: &Vector2f, radius: f32) -> BoundCirclef {
		BoundCirclef { center: *center, radius: radius }
	}
	pub fn new_bcd(bc: &BoundCircled) -> BoundCirclef {
		let mut ret = BoundCirclef::default();
		unsafe { tsBoundCirclef_set_bcd(&mut ret, bc); }
		ret
	}
	pub fn new_br(br: &BoundRectf) -> BoundCirclef {
		let mut ret = BoundCirclef::default();
		unsafe { tsBoundCirclef_set_br(&mut ret, br); }
		ret
	}
	
	pub fn expand_v(&mut self, v: &Vector2f) {
		unsafe { tsBoundCirclef_expand1(self, v); }
	}
	pub fn expand(&mut self, bc: &BoundCirclef) {
		unsafe { tsBoundCirclef_expand(self, bc); }
	}
	
	pub fn expand_radius_v(&mut self, v: &Vector2f) {
		unsafe { tsBoundCirclef_expandRadius1(self, v); }
	}
	pub fn expand_radius(&mut self, bc: &BoundCirclef) {
		unsafe { tsBoundCirclef_expandRadius(self, bc); }
	}
	
	pub fn inside_v(&self, v: &Vector2f) -> bool {
		unsafe { tsBoundCirclef_inside1(self, v) }
	}
	pub fn inside(&self, bc: &BoundCirclef) -> bool {
		unsafe { tsBoundCirclef_inside(self, bc) }
	}
	
	pub fn distance(&self, v: &Vector2f) -> f32 {
		unsafe { tsBoundCirclef_distance(self, v) }
	}
}

impl fmt::Display for BoundCirclef {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "{0} : {1}", self.center, self.radius)
	}
}

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct BoundCircled {
	pub center: Vector2d,
	pub radius: f64,
}

impl BoundCircled {
	
	pub fn new(center: &Vector2d, radius: f64) -> BoundCircled {
		BoundCircled { center: *center, radius: radius }
	}
	pub fn new_bcf(bc: &BoundCirclef) -> BoundCircled {
		let mut ret = BoundCircled::default();
		unsafe { tsBoundCircled_set_bcf(&mut ret, bc); }
		ret
	}
	pub fn new_br(br: &BoundRectd) -> BoundCircled {
		let mut ret = BoundCircled::default();
		unsafe { tsBoundCircled_set_br(&mut ret, br); }
		ret
	}
	
	pub fn expand_v(&mut self, v: &Vector2d) {
		unsafe { tsBoundCircled_expand1(self, v); }
	}
	pub fn expand(&mut self, bc: &BoundCircled) {
		unsafe { tsBoundCircled_expand(self, bc); }
	}
	
	pub fn expand_radius_v(&mut self, v: &Vector2d) {
		unsafe { tsBoundCircled_expandRadius1(self, v); }
	}
	pub fn expand_radius(&mut self, bc: &BoundCircled) {
		unsafe { tsBoundCircled_expandRadius(self, bc); }
	}
	
	pub fn inside_v(&self, v: &Vector2d) -> bool {
		unsafe { tsBoundCircled_inside1(self, v) }
	}
	pub fn inside(&self, bc: &BoundCircled) -> bool {
		unsafe { tsBoundCircled_inside(self, bc) }
	}
	
	pub fn distance(&self, v: &Vector2d) -> f64 {
		unsafe { tsBoundCircled_distance(self, v) }
	}
}

impl fmt::Display for BoundCircled {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "{0} : {1}", self.center, self.radius)
	}
}

/*
 */
extern "C" {
	fn tsBoundCirclef_set_bcd(ret: *mut BoundCirclef, c: *const BoundCircled) -> *mut BoundCirclef;
	fn tsBoundCirclef_set_br(ret: *mut BoundCirclef, r: *const BoundRectf) -> *mut BoundCirclef;
	fn tsBoundCirclef_expand1(ret: *mut BoundCirclef, v: *const Vector2f) -> *mut BoundCirclef;
	fn tsBoundCirclef_expand(ret: *mut BoundCirclef, c: *const BoundCirclef) -> *mut BoundCirclef;
	fn tsBoundCirclef_expandRadius1(ret: *mut BoundCirclef, v: *const Vector2f) -> *mut BoundCirclef;
	fn tsBoundCirclef_expandRadius(ret: *mut BoundCirclef, c: *const BoundCirclef) -> *mut BoundCirclef;
	fn tsBoundCirclef_inside1(bc: *const BoundCirclef, v: *const Vector2f) -> bool;
	fn tsBoundCirclef_inside(bc: *const BoundCirclef, c: *const BoundCirclef) -> bool;
	fn tsBoundCirclef_distance(bc: *const BoundCirclef, v: *const Vector2f) -> f32;
}

extern "C" {
	fn tsBoundCircled_set_bcf(ret: *mut BoundCircled, c: *const BoundCirclef) -> *mut BoundCircled;
	fn tsBoundCircled_set_br(ret: *mut BoundCircled, r: *const BoundRectd) -> *mut BoundCircled;
	fn tsBoundCircled_expand1(ret: *mut BoundCircled, v: *const Vector2d) -> *mut BoundCircled;
	fn tsBoundCircled_expand(ret: *mut BoundCircled, c: *const BoundCircled) -> *mut BoundCircled;
	fn tsBoundCircled_expandRadius1(ret: *mut BoundCircled, v: *const Vector2d) -> *mut BoundCircled;
	fn tsBoundCircled_expandRadius(ret: *mut BoundCircled, c: *const BoundCircled) -> *mut BoundCircled;
	fn tsBoundCircled_inside1(bc: *const BoundCircled, v: *const Vector2d) -> bool;
	fn tsBoundCircled_inside(bc: *const BoundCircled, c: *const BoundCircled) -> bool;
	fn tsBoundCircled_distance(bc: *const BoundCircled, v: *const Vector2d) -> f64;
}

/*****************************************************************************\
 *
 * BoundBox
 *
\*****************************************************************************/

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct BoundBoxf {
	pub min: Vector3f,
	pub max: Vector3f,
}

impl BoundBoxf {
	
	pub fn new(min: &Vector3f, max: &Vector3f) -> BoundBoxf {
		BoundBoxf { min: *min, max: *max }
	}
	pub fn new_bbd(bb: &BoundBoxd) -> BoundBoxf {
		let mut ret = BoundBoxf::default();
		unsafe { tsBoundBoxf_set_bbd(&mut ret, bb); }
		ret
	}
	pub fn new_bs(bs: &BoundSpheref) -> BoundBoxf {
		let mut ret = BoundBoxf::default();
		unsafe { tsBoundBoxf_set_bs(&mut ret, bs); }
		ret
	}
	
	pub fn expand_v(&mut self, v: &Vector3f) {
		unsafe { tsBoundBoxf_expand1(self, v); }
	}
	pub fn expand(&mut self, bb: &BoundBoxf) {
		unsafe { tsBoundBoxf_expand(self, bb); }
	}
	
	pub fn inside_v(&self, v: &Vector3f) -> bool {
		unsafe { tsBoundBoxf_inside1(self, v) }
	}
	pub fn inside(&self, bb: &BoundBoxf) -> bool {
		unsafe { tsBoundBoxf_inside(self, bb) }
	}
	
	pub fn distance(&self, v: &Vector3f) -> f32 {
		unsafe { tsBoundBoxf_distance(self, v) }
	}
}

impl fmt::Display for BoundBoxf {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "{0} : {1}", self.min, self.max)
	}
}

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct BoundBoxd {
	pub min: Vector3d,
	pub max: Vector3d,
}

impl BoundBoxd {
	
	pub fn new(min: &Vector3d, max: &Vector3d) -> BoundBoxd {
		BoundBoxd { min: *min, max: *max }
	}
	pub fn new_bbf(bb: &BoundBoxf) -> BoundBoxd {
		let mut ret = BoundBoxd::default();
		unsafe { tsBoundBoxd_set_bbf(&mut ret, bb); }
		ret
	}
	pub fn new_bs(bs: &BoundSphered) -> BoundBoxd {
		let mut ret = BoundBoxd::default();
		unsafe { tsBoundBoxd_set_bs(&mut ret, bs); }
		ret
	}
	
	pub fn expand_v(&mut self, v: &Vector3d) {
		unsafe { tsBoundBoxd_expand1(self, v); }
	}
	pub fn expand(&mut self, bb: &BoundBoxd) {
		unsafe { tsBoundBoxd_expand(self, bb); }
	}
	
	pub fn inside_v(&self, v: &Vector3d) -> bool {
		unsafe { tsBoundBoxd_inside1(self, v) }
	}
	pub fn inside(&self, bb: &BoundBoxd) -> bool {
		unsafe { tsBoundBoxd_inside(self, bb) }
	}
	
	pub fn distance(&self, v: &Vector3d) -> f64 {
		unsafe { tsBoundBoxd_distance(self, v) }
	}
}

impl fmt::Display for BoundBoxd {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "{0} : {1}", self.min, self.max)
	}
}

/*
 */
extern "C" {
	fn tsBoundBoxf_set_bbd(ret: *mut BoundBoxf, b: *const BoundBoxd) -> *mut BoundBoxf;
	fn tsBoundBoxf_set_bs(ret: *mut BoundBoxf, s: *const BoundSpheref) -> *mut BoundBoxf;
	fn tsBoundBoxf_expand1(ret: *mut BoundBoxf, v: *const Vector3f) -> *mut BoundBoxf;
	fn tsBoundBoxf_expand(ret: *mut BoundBoxf, b: *const BoundBoxf) -> *mut BoundBoxf;
	fn tsBoundBoxf_inside1(bb: *const BoundBoxf, v: *const Vector3f) -> bool;
	fn tsBoundBoxf_inside(bb: *const BoundBoxf, b: *const BoundBoxf) -> bool;
	fn tsBoundBoxf_distance(bb: *const BoundBoxf, v: *const Vector3f) -> f32;
}
